# mesh_network

./: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.node  sdkconfig.root
build_root/: .bin_timestamp  .ninja_deps  .ninja_log  app-flash_args  config.env  flash_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
build_root/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  build.ninja  config.env  project_description.json
build_root/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_root/gdbinit/: gdbinit  symbols
build_root/log/: idf_py_stderr_output_12244  idf_py_stderr_output_12384  idf_py_stderr_output_16748  idf_py_stderr_output_17880  idf_py_stderr_output_17976  idf_py_stderr_output_22068  idf_py_stderr_output_24308  idf_py_stderr_output_24480  idf_py_stderr_output_5184  idf_py_stdout_output_10356  idf_py_stdout_output_10832  idf_py_stdout_output_12244  idf_py_stdout_output_12384  idf_py_stdout_output_16748  idf_py_stdout_output_17880  idf_py_stdout_output_17976  idf_py_stdout_output_20544  idf_py_stdout_output_22068  idf_py_stdout_output_22192  idf_py_stdout_output_23168  (+4 more)
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/mesh/: mesh_config.h  mesh_events.c  mesh_events.h  mesh_node.c  mesh_nodes.h  mesh_root.c  mesh_status.c  mesh_status.h  mesh_tasks.c  mesh_tasks.h  mesh_utils.c  mesh_utils.h  node_ready.c  node_ready.h  root_ready.c  root_ready.h
main/utils/: led.c  led.h
(+8 files in other folders)
